<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.gluckz.pebbleshop</groupId>
        <artifactId>PebbleShop-parent</artifactId>
        <version>1.0.9-SNAPSHOT</version>
    </parent>

    <artifactId>PebbleShop-core</artifactId>
    <packaging>jar</packaging>

    <name>PebbleShop-core</name>

    <description>PebbleShop — Pebble Quest's lightweight player chest shop plugin.</description>
    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>patch-paper-26-version-bootstrap</id>
                        <phase>generate-sources</phase>
                        <configuration>
                            <target>
                                <replace file="${project.basedir}/src/main/java/me/deadlight/ezchestshop/utils/Utils.java">
                                    <replacefilter>
                                        <replacetoken><![CDATA[    static {
        try {
            if (isFolia()) {
                versionUtils = (VersionUtils) Class.forName("me.deadlight.ezchestshop.utils.v1_20_R3").newInstance();
            } else {
                String packageName = Utils.class.getPackage().getName();
                String internalsName = Bukkit.getServer().getClass().getPackage().getName().split("\\.")[3];
                versionUtils = (VersionUtils) Class.forName(packageName + "." + internalsName).newInstance();
            }
        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException
                | ClassCastException exception) {
            Bukkit.getLogger().log(Level.SEVERE,
                    "EzChestShop could not find a valid implementation for this server version.");
        }
    }
]]></replacetoken>
                                        <replacevalue><![CDATA[    static {
        versionUtils = loadVersionUtils();
    }

    private static VersionUtils loadVersionUtils() {
        String packageName = Utils.class.getPackage().getName();
        String bukkitVersion = Bukkit.getBukkitVersion();
        String serverVersion = Bukkit.getVersion();
        String serverPackageName = Bukkit.getServer().getClass().getPackage().getName();

        if ((bukkitVersion != null && bukkitVersion.contains("26.1.2"))
                || (serverVersion != null && serverVersion.contains("26.1.2"))) {
            return new v26_1_2();
        }

        String[] packageParts = serverPackageName.split("\\.");
        if (packageParts.length > 3) {
            try {
                return (VersionUtils) Class.forName(packageName + "." + packageParts[3]).newInstance();
            } catch (Throwable ignored) {
                Bukkit.getLogger().log(Level.WARNING,
                        "[PebbleShop] Could not load legacy version utilities for " + serverPackageName
                                + "; using Paper-safe utilities instead.");
            }
        }

        Bukkit.getLogger().log(Level.WARNING,
                "[PebbleShop] Using Paper-safe version utilities for " + serverPackageName
                        + " / " + bukkitVersion + ".");
        return new PaperVersionUtils();
    }
]]></replacevalue>
                                    </replacefilter>
                                </replace>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>dev.triumphteam.gui</pattern>
                            <shadedPattern>me.deadlight.ezchestshop.gui</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>de.themoep.minedown</pattern>
                            <shadedPattern>me.deadlight.ezchestshop.minedown</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>net.kyori</pattern>
                            <shadedPattern>me.deadlight.ezchestshop.kyori</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>bg-repo</id>
            <url>https://repo.bg-software.com/repository/api/</url>
        </repository>
        <repository>
            <id>minebench-repo</id>
            <url>https://repo.minebench.de/</url>
        </repository>
        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <repository>
            <id>glaremasters-repo</id>
            <url>https://repo.glaremasters.me/repository/towny/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.20.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.12.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.triumphteam</groupId>
            <artifactId>triumph-gui</artifactId>
            <version>3.1.2</version>
        </dependency>
        <dependency>
            <groupId>de.themoep</groupId>
            <artifactId>minedown</artifactId>
            <version>1.7.1-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.0.5</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>4.0.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>com.palmergames.bukkit.towny</groupId>
            <artifactId>towny</artifactId>
            <version>0.99.5.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.Anon8281</groupId>
            <artifactId>UniversalScheduler</artifactId>
            <version>0.1.6</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>